<resources>
    <string name="app_name">paisespart2</string>
    <string name="todo">todo</string>
    <string name="quito">QUITO</string>
    <string name="ecuador">ECUADOR</string>
    <string name="ec">EC</string>
    <string name="title_activity_maps">Map</string>
    <string name="back">Back</string>
    <string name="detectar">Detectar</string>
    <string name="capturar">CAPTURAR</string>
    <string name="search">SEARCH</string>
</resources>