<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_launcher_background"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@id/imageView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_Pais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/ecuador"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_Capital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quito"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_Iso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ec"
                android:textColor="@android:color/black"
                android:layout_centerVertical="true"
                android:layout_marginEnd="35dp"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>