<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:ignore="Deprecated">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    tools:ignore="UselessParent">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/ic_launcher_background"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:contentDescription="@string/todo" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@id/imageView"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_Pais"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/ecuador"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />
                        <TextView
                            android:id="@+id/text_Capital"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/quito"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/text_Iso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ec"
                        android:textColor="@android:color/black"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="35dp"
                        android:layout_alignParentEnd="true"
                        android:textSize="18sp"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            tools:context=".MapsActivity" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_CapitalF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_Iso2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_IsoNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_Iso3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_Fips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_TelfPrefix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_Center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/text_Rentangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:paddingTop="5dp"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/textButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
                    android:text="@string/back"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</AbsoluteLayout>